--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "strict": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
   "include": ["**/*.ts"],
-  "exclude": ["**/node_modules/**", "**/dist/**"],
+  "exclude": ["**/node_modules/**", "**/dist/**"]
 }
