--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,6 @@
 REMOTE_PROVIDER_URL=https://example.com
 EXTERNAL_PORT=9090
 AUTH_TOKEN=your_auth_token_here
+GLOBAL_UA=clash.meta
+TUN_DEVICE_NAME=Virtual Adapter
+TUN_STRICT_ROUTE=true
